# ri_gate_visual_pose_estimation

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
archive/fastlio_integration/: README.md
archive/fastlio_integration/config/: mid360_roi.yaml
archive/fastlio_integration/docs/: README.legacy.md  README.legacy.zh-CN.md
archive/fastlio_integration/launch/: fastlio_with_roi.launch.py
archive/fastlio_integration/roi_lidar_corner/: corner_lidar_solver_node.py  lidar_projection_exposure_capture.py
archive/fastlio_integration/scripts/: capture_lidar_projection_exposure.sh  env_fastlio.sh  env_fastlio_nx.sh
archive/fastlio_integration/tests/: test_fastlio_with_roi_launch_defaults.py  test_wrapper_script_defaults.py
docs/superpowers/plans/: 2026-04-23-roi-debug-decoupling.md
docs/superpowers/specs/: 2026-04-24-roi-lidar-refactor-design.md  2026-04-24-roi-lidar-refactor-design.zh-CN.md  2026-04-24-roi-offline-analyzer-design.md  2026-06-13-roi-generator-priors-design.md
scripts/: capture_lidar_projection_exposure.sh  capture_roi_hit_heatmap.sh  env_fastlio.sh  env_fastlio_nx.sh  run_fastlio_with_roi.sh  run_fastlio_with_roi_nx.sh
src/roi_lidar_corner/: CMakeLists.txt  README.md  README.zh-CN.md  package.xml  setup.py
src/roi_lidar_corner/config/: roi_lidar_corner.yaml
src/roi_lidar_corner/launch/: roi_lidar_corner.launch.py
src/roi_lidar_corner/msg/: Corner3D.msg  Corner3DArray.msg  CornerROI.msg  FrontFaceDebug.msg  FrontFaceROI.msg  FrontFaceROIArray.msg  ObjectROI.msg  ObjectROIArray.msg  StructureROI.msg
src/roi_lidar_corner/resource/: roi_lidar_corner
src/roi_lidar_corner/roi_lidar_corner/: __init__.py  corner_lidar_solver_node.py  detection_runtime.py  evaluate_roi_video_stability.py  front_face_restorer.py  lidar_projection_exposure_capture.py  lookback_solver.py  neo_roi_refiner.py  offline_front_face_validation.py  roi_generator_node.py  roi_geometry_prior.py  roi_lidar_debug_markers.py  roi_lidar_debug_view.py  structure_point_filter.py  structure_roi_builder.py  structure_tracker.py
src/roi_lidar_corner/scripts/: publish_mock_front_face_corners.py
src/roi_lidar_corner/tests/: test_corner_lidar_solver_node.py  test_default_alignment.py  test_detection_runtime.py  test_evaluate_roi_video_stability.py  test_front_face_restorer.py  test_lidar_projection_exposure_capture.py  test_lookback_solver.py  test_message_contracts.py  test_neo_roi_refiner.py  test_offline_front_face_validation.py  test_roi_generator_node.py  test_roi_geometry_prior.py  test_roi_lidar_corner_image_topic_defaults.py  test_structure_point_filter.py  test_structure_roi_builder.py  test_structure_tracker.py
src/roi_lidar_fixture/: package.xml  setup.cfg  setup.py
src/roi_lidar_fixture/roi_lidar_fixture/: __init__.py  static_scene_fixture_data.py  static_scene_fixture_publisher.py
src/roi_lidar_fixture/tests/: test_static_scene_fixture_data.py
